resources/variants/dev/testbed/build_error_withLcd_atmega.log
>make dev/testbed:withLcd_atmega:build RELEASE_REVISION=0 IS_RESOURCE_ORIGIN_ONLINE=1
src/modules/km0/visualizer/oledDisplay_atmega/oledDisplay_default.c:28:25: error: initializer element is not constant
 uint8_t mainFontWidth = oledFontWidth;
                         ^
src/modules/km0/visualizer/oledDisplay_atmega/oledDisplay_default.c:29:33: error: initializer element is not constant
 uint8_t mainFontLetterSpacing = oledFontLetterSpacing;
                                 ^
make[1]: *** [workers/worker_atmega32u4.mk:89: build/dev/testbed/withLcd_atmega/obj/src/modules/km0/visualizer/oledDisplay_atmega/oledDisplay_default.o] Error 1
make: *** [Makefile:64: dev/testbed:withLcd_atmega:build] Error 2
